# StepSequencer_SW

./: .dockerignore  .gitignore  .gitmodules  BassStationSequencerSW.code-workspace  CMakeLists.txt  CppCheckSuppressions.txt  LICENSE.md  README.md  STM32G0B1KETXN_FLASH.ld  StepSequencer.code-workspace  linux.cmake  readme.md  run_test.sh  setup.md  stm32.cmake
.devcontainer/: devcontainer.json
.devcontainer/docker/: Dockerfile  README.md
.devcontainer/docker/GNU10.3-2021.10/: Dockerfile
.devcontainer/docker/GNU11.3.rel1/: Dockerfile
cmake/: linux.cmake  stm32.cmake
coverage/: CppCheckSuppressions.txt  index.html  index.source_cpp_ssd1306_inc_font.hpp.html  index.source_cpp_ssd1306_inc_font11x16.hpp.html  index.source_cpp_ssd1306_inc_font16x26.hpp.html  index.source_cpp_ssd1306_inc_font3x5.hpp.html  index.source_cpp_ssd1306_inc_font5x7.hpp.html  index.source_cpp_ssd1306_inc_font7x10.hpp.html  index.source_cpp_ssd1306_inc_fontdata.hpp.html  index.source_cpp_ssd1306_inc_ssd1306.hpp.html  index.source_cpp_ssd1306_src_font.cpp.html  index.source_cpp_ssd1306_src_ssd1306.cpp.html  index.source_cpp_tlc5955_src_tlc5955.cpp.html  index.source_main_app_src_mainapp.cpp.html
cpp_ssd1306/: CMakeLists.txt  README.md
cpp_ssd1306/inc/: font.hpp  ssd1306.hpp
cpp_ssd1306/src/: font11x16.cpp  font16x26.cpp  font3x5.cpp  font5x7.cpp  font7x10.cpp  ssd1306.cpp
cpp_ssd1306/tests/: CMakeLists.txt  catch_cpp_ssd1306.cpp
cpp_tlc5955/: CMakeLists.txt  readme.md
cpp_tlc5955/inc/: tlc5955.hpp
cpp_tlc5955/src/: tlc5955.cpp
cpp_tlc5955/tests/: CMakeLists.txt  catch_cpp_tlc5955.cpp
doc/: building.md
main_app/: CMakeLists.txt
main_app/inc/: LedManager.hpp  SequencerLedManager.hpp  display_manager.hpp  file_manager.hpp  keypad_manager.hpp  led_manager.hpp  mainapp.hpp  note.hpp  sequence_manager.hpp  step.hpp
main_app/src/: LedManager.cpp  SequencerLedManager.cpp  display_manager.cpp  file_manager.cpp  keypad_manager.cpp  led_manager.cpp  mainapp.cpp  sequence_manager.cpp  step.cpp
main_app/tests/: CMakeLists.txt  mock_cmsis.hpp
source/: STM32G0B1KETXN_FLASH.ld  cube_gen_src  hal_drivers
source/main_app/: CMakeLists.txt  mainapp.cpp
source/main_app/inc/: mainapp.hpp
source/main_app/src/: mainapp.cpp
source/main_app/tests/: catch_main_app.cpp
source/segger_rtt/: CMakeLists.txt
source/tests/: CMakeLists.txt  main.cpp  test.cpp
stm32cube_workspace/: CMakeLists.txt
stm32cube_workspace/G0B1KET6N/: .cproject  .mxproject  .project  G0B1KET6N Debug.launch  G0B1KET6N.ioc  G0B1KET6N.txt  STM32G0B1KETXN_FLASH.ld  STM32G0B1KETXN_RAM.ld
stm32cube_workspace/G0B1KET6N/Core/: CMakeLists.txt  Core
stm32cube_workspace/G0B1KET6N/Core/Inc/: i2c.h  main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  tim.h  usart.h
stm32cube_workspace/G0B1KET6N/Core/Src/: dma.c  gpio.c  i2c.c  main.c  spi.c  stm32g0xx_it.c  tim.c  usart.c
stm32cube_workspace/G0B1KET6N/mainapp/: mainapp.cpp  mainapp.hpp  tlc5955.cpp  tlc5955.hpp
